force-app/main/default/objects/Storage_OAuth_Configuration__mdt/Storage_OAuth_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Storage OAuth Configuration</label>
    <pluralLabel>Storage OAuth Configurations</pluralLabel>
</CustomObject>