force-app/main/default/objects/Storage_OAuth_Configuration__mdt/fields/OAuth_URL__c.field-meta.xml
<CustomField>
    <fullName>OAuth_URL__c</fullName>
    <label>OAuth URL</label>
    <type>Url</type>
</CustomField>