force-app/main/default/objects/Storage_OAuth_Configuration__mdt/fields/Page_Token__c.field-meta.xml
<CustomField>
    <fullName>Page_Token__c</fullName>
    <label>Page Token</label>
    <type>Url</type>
</CustomField>