force-app/main/default/objects/Storage_OAuth_Configuration__mdt/fields/Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_URL__c</fullName>
    <label>Token URL</label>
    <type>Url</type>
</CustomField>