force-app/main/default/objects/Storage_OAuth_Configuration__mdt/fields/User_Token__c.field-meta.xml
<CustomField>
    <fullName>User_Token__c</fullName>
    <label>User Token</label>
    <type>Url</type>
</CustomField>